// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component should match default snapshot 1`] = `
<div>
  <p
    class="sc-bdVaJa hAuZMy"
  >
    This is mocked text
  </p>
</div>
`;

exports[`Text component should match snapshot with truncated text 1`] = `
<div>
  <p
    class="sc-bdVaJa tTRQZ"
  >
    This is mocked text
  </p>
</div>
`;

exports[`Text component should match snapshot with underlined text 1`] = `
<div>
  <p
    class="sc-bdVaJa dfSOMa"
  >
    This is mocked text
  </p>
</div>
`;

exports[`Text component should match snapshot with uppercased text 1`] = `
<div>
  <p
    class="sc-bdVaJa KxWHc"
  >
    This is mocked text
  </p>
</div>
`;
